--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  async
+  defer
+></script>
+<script>
+	window.pixelId = "664d1dbc287164b0691207fb";
+	var a = document.createElement("script");
+	a.setAttribute("async", "");
+	a.setAttribute("defer", "");
+	a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+	document.head.appendChild(a);
+  </script>
 <!DOCTYPE html><html lang="pt-BR"><head>
 	<meta charset="UTF-8">
 			<title>s-cpf – Atualizado</title>
